# asana-to-github

./: .gitignore  README.md  asana-to-githib.cabal  asana-to-github.cabal
app/: Main.hs
src/: Config.template  Lib.hs
