name:                asana-to-github
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/asana-to-github#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Config
  build-depends:       base >= 4.7 && < 5
                       , aeson 
                       , text
                       , bytestring
                       , lens
                       , cassava
                       , aeson-casing
                       , wreq
                       , interpolatedstring-perl6
                       , vector
                       , retry
                       , text
                       , github
                       , containers
  default-language:    Haskell2010

executable asana-to-github-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson 
                     , bytestring
                     , asana-to-github
                     , cassava
                     , wreq
                     , interpolatedstring-perl6
                     , vector
                     , retry
                     , text
                     , github
                     , containers
  default-language:    Haskell2010

test-suite asana-to-github-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , asana-to-github
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/asana-to-github
